assets/css/style.css
/*style for header */
header {
  width: 100%;
  height: 90px; 
  background-color:  #ffffff;
  border-bottom: solid #cccccc 1px;  
  top: 0px;
  left: 0px;
  position: fixed; 
  z-index: 5;
  font-family: 'Georgia', Times, Times New Roman, serif;
}

/*style for nav container*/
.navContainer {
  margin: 0 auto; 
  width: 960px;
}

/*style for name div in nav container*/
.name {
  font-size: 30px;
  text-align: center;
  float: left; 
  width: 250px;
  height: 90px;
  background-color: #4aaaa5;
  padding-left: 15px; 
  padding-right: 15px; 
  z-index: 1;
  font-family: Georgia, Times, "Times New Roman", serif;
  font-weight: 700;
  line-height: 90px;
  color: #ffffff;
}


/* Style for Nav list in navigation bar*/
.nav-list {
    margin-top: 30px; 
    color: #777777;
    float: right; 
    font-size: 18px; 
    line-height: 18px;   
  }
   
/*Style for unordered list / in the Nav List */
ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

  /*Style for list items in the Nav List */
li {
    display:inline;
}

/*Style for hyperlinks in the nav items */
a.navOptions:link 
{ 
  text-decoration:none; 
  color:#777777;
  font-size: 1.0em; 
  padding-right: 20px;
  right: 0px; 
} 
  /*Style for when navigation hyperlinks are visited*/
a.navOptions:visited {
  text-decoration:none; 
  color:#777777;
  font-size: 1.0em; 
  padding-right: 30px;
}
/*Style when hovering over navigation hyperlinks*/
a.navOptions:hover {
  color: #4aaaa5;
}

/*Style for hyperlink in name div*/
.namelink {
  font-weight: bold; 
  text-align: center; 
  line-height: 3em;
  }
/*Style for hyperlink in name div*/
a.namelink:link 
{ 
    text-decoration:none; 
    color: #ffffff;
}
  /*Style for hyperlink in name div when visited*/
a.namelink:visited {
  color: #ffffff;
}
/*Style for hyperlink in name div when hovering*/
a.namelink:hover {
  color: #777777;
}
      
/*Style for body*/
body {
  width: 960px; 
  margin: auto;
  padding: 0; 
  background-image: url("../images/tiny-squares.png");
  height: 700px; 
  background-color:  #ffffff;
  position: relative;
}

/*Style for content div on index.html page for about me section */
.container {
    width: 960px; 
    height: 400px; 
    margin: auto; 
    background-color: #ffffff;
    text-align: left;
    border: solid #cccccc .5px; 
    margin-top: 120px; 
}

/*Style for paragraph */
p {
    margin-left: 15px; 
    text-align: left;
    line-height: 1.5;
    color: #777777;
    font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
}    

/*Style for profile image and image link on index page  */
a img {
    padding-top: 15px;
    padding-left: 15px; 
    padding-right:15px; 
    float: left; 
}

/*Style for project photos on portfolio page  */
.portfolioContainer img {
  position: relative;
  width: 200px; 
  height: 160px; 
  border: solid #cccccc 1.5px; 
}

/*Style for footer */
footer {
    background-color: #666666;
    left: 0;
    bottom: 0;
    width: 100%;
    position:fixed;
    font-size: 10px; 
    border-top: solid #4aaaa5 10px;
    z-index: 5;
    }

/*Style for paragrpah text in footer */
 p.footer {
 text-align:center;
 color: #aaa;
 font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
 }

 /*style for h2 tags */
h2 {
  border-bottom: 3px solid #dddddd;
  color: #4aaaa5;
  font-family: 'Georgia', Times, Times New Roman, serif;
  padding-bottom: 20px;
  margin-right: 10px; 
  margin-left: 10px; 
  margin-bottom: 15px;
  line-height: 22px;
  font-size: 30px;
}

/*style for h2 tag in container div */
.container h2 {
  margin-top: -30px; 
  padding-top: 0px; 
  font-family: 'Georgia', Times, Times New Roman, serif;
}

/*style for box container on portfolio page */
 .portfolioContainer{
  margin:0; 
  padding: 0; 
  width: 960px; 
  height: 800px; 
  background-color: #ffffff;
  border: solid #cccccc 2px; 
  border-radius: 5px;
  margin-top: 120px; 
  float: left; 
 
}

/* Style used for grid on portfolio page */
* {
  box-sizing: border-box;
}


/* Style for rows on portfolio page */
.row {
  display: flex;
  flex-wrap: wrap;
  padding: 0 2px;
}

/* Style for columns on portfolio page */
.column {
  float: left;
  width: 25%;
  padding: 5px;
}

/* Clear floats after image containers */
.row::after {
  content: "";
  clear: both;
  display: table;
}

/* Style box inputs that have type="text" (Email and Name)*/
input[type=text], select, textarea {
  width: 100%; 
  padding: 12px; 
  border: 1px solid #ccc; 
  border-radius: 4px; 
  box-sizing: border-box; 
  margin-top: 10px; 
  margin-bottom: 16px; 
  resize: vertical;
  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
}

/* Style for the submit button */
input[type=submit] {
  background-color: #4aaaa5;
  color: #ffffff;
  padding: 12px 20px;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
}

/* When moving the mouse over the submit button, add a darker gray color */
input[type=submit]:hover {
  background-color: #666666;
}

/* Add a background color and some padding around the form container */
.container {
  width: 960px; 
  margin: 0;
  padding: 0;
  height: auto; 
  background-color:  #ffffff;
  padding-top: 50px; 
  border: solid #cccccc 1.5px; 
  margin-top: 120px; 
}

/* style for title on portfolio page*/
.PortfolioTitle {
  color: #4aaaa5;
  font-family: 'Georgia', Times, Times New Roman, serif;
}

/*style for h3 tags placed on project items for the protfolio page*/
h3 {
    background-color: #4aaaa5;
    z-index: 2;
    top: 50%;
    font-size: 15px;
    height: 26px;
    color:  #ffffff;
    line-height: 1.5em; 
    font-family: 'Georgia', Times, Times New Roman, serif;
    width: 100%; 
    position: relative; 
    top: -55px; 
    width: 200px; 
  }
 

/* ----------------------------------------CSS for larger displays------------------------------------------------ */
/*style for container when display is max-width 980px */
@media screen and (max-width: 980px) {
  .container{
    float: left;
    margin-right: 100px; 
    width: 85%;
    margin-left: 30px;  
  }
  }

/*style for portfoliocontainer div when display is max-width 980px */
  @media screen and (max-width: 980px) {
    .portfolioContainer{
      width: 85%; 
      margin-left: 30px; 
    
    }
    }

    /*style for columns on portfolio page when display is max-width 980px */
    @media screen and (max-width: 980px) {
    .column {
      float: left;
      width: 40%;
      padding: 5px;
    }
  }
  
 /*style for body when display is max-width 980px */
  @media screen and (max-width: 980px) {
    body {
      width: 100%; 
    }
  }

   /*style for name div when display is max-width 980px */
  @media screen and (max-width: 980px) {
    .name {
      margin-left: 30px; 
    }
  }
  
  
@media screen and (max-width: 980px) {
  .navContainer{
    width: 100%;
  }
}

   /*style for header when display is max-width 980px */
@media screen and (max-width: 980px) {
header{
  width: 100%; 
  float: left; 
}
}

/* ----------------------------------------CSS for medium sized displays------------------------------------------------ */

/*style for .name div when display is max-width 768px */
@media screen and (max-width: 768px) {
  .name {
    position: static; 
  }
}

  /*style for naveContainer when display is max-width 768px */
@media screen and (max-width: 768px) {
.navContainer{

margin: 0 auto; 
width: 100%; 
}
}


/*style for portfolioContainer when display is max-width 768px */
@media screen and (max-width: 768px) {
  .portfolioContainer{
    width: 100%;
    margin: 0 auto;
    margin-top: 120px; 
    margin-left: 30px; 
   }
  }

  /*style for columns when display is max-width 768px */
  @media screen and (max-width: 758px) {
    .column {
      float: left;
      width: 40%;
      padding: 5px;
    }
  }
  

/* ----------------------------------------CSS for smaller sized displays (Mobile))------------------------------------------------ */

/*style for .name div when display is max-width 640px */
  @media screen and (max-width: 640px) {
      .name {
        width: 100%;
        margin: 0;
        line-height: 3em;
        display: inline-block;
        position: static; 
      }
    }

    /*style for container div when display is max-width 640px */
    @media screen and (max-width: 640px) {
      .container{
        height: auto;
        background-color: #ffffff;
        border: solid #cccccc .5px; 
        display: inline-block;
        margin:0 auto;
        width:100%;
        margin-bottom: 70px; 
      }
    }

      /*style for portfoliocontainer div when display is max-width 640px */
      @media screen and (max-width: 640px) {
        .portfolioContainer{
          width: 100%; 
          height: auto; 
          margin: auto; 
          text-align: left;
      }
    }
    
/*style for navContainer div when display is max-width 640px */
@media screen and (max-width: 640px) {
  .navContainer{
          margin: 0 auto; 
          width: 100%; 
        }
      }


/*style for nav-list when display is max-width 640px */
@media screen and (max-width: 640px) {
  .nav-list {
  color: #777777;
  width: 100%; 
  padding-right: 0px; 
  position: static; 
  height: 50px; 
  float: right; 
}
}

/*style for header when display is max-width 640px */
@media screen and (max-width: 640px) {
  header{
    width: 100%;
    height: auto;  
    padding: 0; 
    margin: 0; 
    position: static;
    float: right;   
  }
}

/*style for body when display is max-width 640px */
@media screen and (max-width: 640px) {
  body {
  width: 100%;
  padding-left: 10px; 
  padding-right: 10px; 
  margin: 0; 
}
}


/*style for h2 take in container div when display is max-width 640px */
@media screen and (max-width: 640px) {
.container h2 {
  padding-bottom: 10px; 
  text-align: center;
}
}

/*style for h2 tag in Portfolio title when display is max-width 640px */
@media screen and (max-width: 640px) {
h2.PortfolioTitle{
  padding-bottom: 10px; 
  margin-top: 10px; 
  text-align: center; 
}
}

/*style for ul.nav-list when display is max-width 640px */
@media screen and (max-width: 640px) {
  ul.nav-list {
  padding: 0px; 
  margin-top: 20px; 
  text-align: center; 
}
}

/*style for paragraphs when display is max-width 640px */
@media screen and (max-width: 640px) {
p {
  font-size: 1.5em;
}
}

/*style for column when display is max-width 640px */
@media screen and (max-width: 640px) {
  .column {
    flex: 100%;
    max-width: 100%;
  }
}

